--- a/css/main.css
+++ b/css/main.css
@@ -2063,6 +2063,7 @@ img.lazy {
 }
 
 .contact .map {
+    
     padding: 0;
     position: relative;
     z-index: 4
@@ -2112,6 +2113,8 @@ img.lazy {
 
 .contact .map-canvas {
     bottom: 0;
+    /* height: 100%; */
+    width: 100%;
     height: 100%;
     left: 0;
     min-height: 260px;
