--- a/css/main.css
+++ b/css/main.css
@@ -3246,7 +3246,7 @@ transform: translateY(70px);
     .navbar .modal-link {
         position: absolute;
         top: 27px;
-        left: 55%;
+        left: 45%;
     }
 
     .navbar .navbar-collapse {
@@ -3408,7 +3408,7 @@ transform: translateY(70px);
     }
 
     .navbar .modal-link {
-        left: 45%;
+        left: 35%;
     }
 
     .header .caption .h3 {
@@ -3496,7 +3496,7 @@ transform: translateY(70px);
 @media (max-width: 580px) {
 
     .navbar .modal-link {
-        left: 25%;
+        left: 15%;
     }
 
 
@@ -3776,11 +3776,11 @@ transform: translateY(70px);
 @media only screen and (max-width: 375px) {
 
     .navbar .modal-link {
-        left: 20%;
+        left: 18%;
     }
 
     .modal-link span {
-        font-size: 11px;
+        font-size: 9px;
     }
 
 
@@ -3851,7 +3851,8 @@ transform: translateY(70px);
 @media only screen and (max-width: 320px) {
 
     .navbar .modal-link {
-        left: 25%;
+        left: 19%;
+        padding: 5px 5px;
     }
 
 
@@ -4242,8 +4243,8 @@ a.gallery__item__link:hover{
         margin-right: 10px;
     }
 .modal-link {
-    margin-left: 10px;
-    margin-right: 15px;
+    margin-left: 5px;
+    margin-right: 0;
 
 }
 
