--- a/css/main.css
+++ b/css/main.css
@@ -234,7 +234,7 @@ a:hover {
 
 @media only screen and (min-width: 1170px) {
     .cd-headline {
-        font-size: 6rem
+        font-size: 5rem
     }
 }
 
@@ -2033,7 +2033,8 @@ img.lazy {
 }
 
 .clients {
-    padding: 55px 0
+    margin-top: -80px;
+    padding: 55px 0;
 }
 
 .clients a {
@@ -3162,9 +3163,9 @@ transform: translateY(70px);
     .caption p br {
         display: none;
     }
-.non-visible{
+/* .non-visible{
     display: block;
-}
+} */
 
     .header .caption p {
         font-size: 24px;
@@ -3502,6 +3503,7 @@ transform: translateY(70px);
 
 
     .clients {
+        margin-top: -80px;
         padding: 0
     }
 
